--- a/Todos/Views/Angular/Index.cshtml
+++ b/Todos/Views/Angular/Index.cshtml
@@ -1,7 +1,13 @@
 ﻿
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "AngularSpa";
 }
 
 <h2>Index</h2>
 
+<div ng-app="angularApp">
+
+</div>
+
+@Scripts.Render("~/bundles/angular")
+@Scripts.Render("~/bundles/angularApp")
